# ASTRO

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: controllers.yaml  dummy.yaml  ekf.yaml  ekf_localization.yaml  joystick.config.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
config/nav_params/: costmap_common_params.yaml  dwa_local_planner_params.yaml
description/: astro.urdf.xacro  caster_wheels.xacro  crta_diffbot.urdf.xacro  gazebo_control.xacro  imu.xacro  laser.xacro  lidar.xacro  materials.xacro  realsense.xacro  robot_core.xacro  ros2_control.xacro
description/meshes/: Chassis.stl
include/astro/: astro_diffdrive.hpp  dummy.hpp  serial_comms.h  serial_comms.hpp  visibility_control.h
launch/: joy.launch  lidar.launch.py  move_base.launch  navigation.launch  robot_bringup.launch  rsp.launch  rsp.launch.py  save_map.launch  sensor_fusion.launch  simulation.launch  start_gmapping.launch  start_hardware.launch  start_lidar.launch  start_motors.launch  start_slam.launch  twist_mux.launch
maps/: map.pgm
meshes/: ASTRO_Chassis.stl
rviz/: move_robot.rviz  navigation_robot.rviz  realsense_robot.rviz  slam_robot.rviz  view_lidar.rviz  view_robot.rviz
scripts/: figure_eight.py  get_currents.py
src/: astro_diffdrive.cpp  dummy.cpp
worlds/: basic_obstacles.world
